# BrickESC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  License.md  Readme.md  arduino-path.txt  attiny-core-path.txt  controller.c  env.cmake.example  env.travis.cmake  rc.h  speed-controller.ino
cmake/: arduino-1.6.cmake  arduino.cmake  avr-arduino.cmake  avr-toolchain.cmake  build-env.example.cmake
doc/: mac-toolchain.md  pins.md
src/: Controller.cpp  Controller.h  Led.cpp  Led.h  RCInput.cpp  RCInput.h  Settings.cpp  Settings.h  controller.c  controller.h  dual_hbridge.cpp  input.c  input.h  main.c  main.cpp  main.h  motor.c  motor.h  pinout.h  rc.h  rc_input.c  rc_input.h  relais_fet.cpp  relay_fet.cpp  settings.c  settings.h  util.c  util.cpp  util.h
src/Math/: Math.cpp  Math.h
src/Util/: Util.cpp  Util.h
src/clock/: Clock.cpp  Clock.h
src/controller/: Controller.cpp  Controller.h
src/input/: RCInput.cpp  RCInput.h
src/output/: DOut.cpp  DOut.h  PWMOut.cpp  PWMOut.h
